# BoidsPC

./: CMakeLists.txt  README.md  settings.txt
src/: boids.cpp  boids.h  grid.cpp  grid.h  grid.hpp  main.cpp  settings.cpp  settings.h  stats.cpp  stats.h
